Added New Design layout.

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
           <img  src="images/metal3.jpg"
                 id="steelImage"
 
-                class="steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
+                class="Steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
             />
         </td>
       </tr>
@@ -76,8 +76,7 @@
         <td>
           <img  src="images/aluminium.jpg"
                 id="nickelImage"
-
-                class="steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
+                class="Wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
         </td>
       </tr>
       <tr>
