--- a/app/index.html
+++ b/app/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Material selection</title>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <!-- Custom styles for this template -->
-  <script data-main="scripts/main" src="scripts/vendor/requirejs/require.js"></script>
+
+  <title>Freelancer - Start Bootstrap Theme</title>
   <link href="css/main.css" rel="stylesheet" type="text/css">
+
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <script data-main="scripts/main" src="scripts/vendor/requirejs/require.js"></script>
 
 </head>
 <body>
@@ -57,6 +63,7 @@
             <td>
               <img  src="images/metal3.jpg"
                     id="steel"
+                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
                     class="Steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                 />
             </td>
@@ -66,6 +73,7 @@
             <td>
               <img  src="images/aluminium.jpg"
                     id="nickle"
+                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
                     class="Wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -74,6 +82,7 @@
             <td>
               <img  src="images/titainum.jpg"
                     id="titanium"
+                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
                     class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -82,6 +91,7 @@
             <td>
               <img  src="images/crate.jpg"
                     id="wood"
+                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
                     class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -90,6 +100,7 @@
             <td>
               <img  src="images/carbon-texture.png"
                     id="carbon"
+                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
                     class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -126,7 +137,7 @@
           <div class="panel-body" style="display: table;
                                 height: 94%; width:100%">
             <div class="content">
-              <div id="jet" style="background-color: #708090" class="webgl img-thumbnail img-responsive"></div>
+              <div id="jet" style="background-color: #708090;min-height: 350px;" class="webgl img-thumbnail img-responsive"></div>
             </div>
             <div class="footer">
               <div class="col-sm-3">
@@ -179,6 +190,69 @@
   </div>
 </div>
 <!-- /.container -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+
+<!-- HELP Modal -->
+<div class="modal fade" id="HELPModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: #005f8d; color: #ffffff">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Help</h4>
+      </div>
+      <div class="modal-body">
+        <h4>Welcome to the help section.</h4>
+        <p>Site needs:</p>
+        <ul>
+          <li>Modern Day Browser</li>
+          <li>Must Support WebGL, If in doubt go here: <a href="https://get.webgl.org/">https://get.webgl.org/</a>
+          </li>
+        </ul>
+        <h4>How to use the site</h4>
+        <ul>
+          <li>View the Jet Engine learn about each part</li>
+          <li>Click and drag to rotate the Jet Engine</li>
+          <hr/>
+          <li>View the Materials Section</li>
+          <li>Click on choose and drag the right material to the correct part </li>
+          <hr/>
+          <li>View the Check</li>
+          <li>Click and drag the material image to the box under the Jet Engine component</li>
+          <li>Once you have chosen your selection click the check button to see if you are correct</li>
+        </ul>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- ABOUT Modal -->
+<div class="modal fade" id="ABOUTModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: #005f8d; color: #ffffff">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" >About</h4>
+      </div>
+      <div class="modal-body">
+        Application written by <a href="http://robrotheram.com">Robert Fletcher</a> as part of Computer Science Master
+        Degree. 2014
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 </body>
 </html>
