--- a/app/oldDesign.html
+++ b/app/oldDesign.html
@@ -10,7 +10,7 @@
       <meta name="author" content="">
 
       <title>Freelancer - Start Bootstrap Theme</title>
-      <link href="css/main.css" rel="stylesheet" type="text/css">
+      <link href="css/oldmain.css" rel="stylesheet" type="text/css">
 
       <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
       <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
