--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,9 @@
   </nav>
   <div class="wrapper">
     <div class="row"style="height:100%;padding:0px; margin:0px; background-color:#000">
-      <div class="col-lg-2" style="height:100%; padding:5px;">
-        <table class="contact-table borderless table table-curved" style="height: 96%; margin-top:10px; background-color: #f5f5f5">
-          <col width="70%">
+      <div class="col-lg-3" style="height:100%; padding:5px;">
+        <table class="contact-table borderless table table-curved fixed" style="height: 96%; margin-top:10px; background-color: #f5f5f5">
+          <col width="75%">
           <col width="25%">
           <tr>
             <td><b>Steel</b></td>
@@ -129,7 +129,7 @@
           </tr>
         </table>
       </div>
-      <div class="col-lg-10" style="height:100%; padding:5px;">
+      <div class="col-lg-9" style="height:100%; padding:5px;">
         <div class="panel panel-default" style="height:96%;  margin-top:10px;">
           <div class="panel-heading">
             <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Jet Engine</h3>
