--- a/app/index.html
+++ b/app/index.html
@@ -53,13 +53,13 @@
     </div>
   </nav>
   <div class="wrapper">
-    <div class="row"style="height:100%;padding:0px; margin:0px; background-color:#000">
+    <div class="row"style="height:100%;padding:0px; padding-left: 15px; padding-right: 15px; margin:0px;">
       <div class="col-lg-3" style="height:100%; padding:5px;">
-        <table class="contact-table borderless table table-curved fixed" style="height: 96%; margin-top:10px; background-color: #f5f5f5">
+        <table class="contact-table borderless table  fixed" style="height: 96%; margin-top:10px; background-color: #f5f5f5">
           <col width="75%">
           <col width="25%">
           <tr>
-            <td><b>Steel</b></td>
+            <td valign="middle"><b>Steel</b></td>
             <td>
               <img  src="images/metal3.jpg"
                     id="steel"
@@ -69,7 +69,7 @@
             </td>
           </tr>
           <tr>
-            <td><b>Nickle</b></td>
+            <td valign="middle"><b>Nickle</b></td>
             <td>
               <img  src="images/aluminium.jpg"
                     id="nickle"
@@ -78,7 +78,7 @@
             </td>
           </tr>
           <tr>
-            <td><b>Titanium</b></td>
+            <td valign="middle"><b>Titanium</b></td>
             <td>
               <img  src="images/titainum.jpg"
                     id="titanium"
@@ -87,7 +87,7 @@
             </td>
           </tr>
           <tr>
-            <td><b>Wood</b></td>
+            <td valign="middle"><b>Wood</b></td>
             <td>
               <img  src="images/crate.jpg"
                     id="wood"
@@ -96,7 +96,7 @@
             </td>
           </tr>
           <tr>
-            <td><b>Carbon Fibre</b></td>
+            <td valign="middle"><b>Carbon Fibre</b></td>
             <td>
               <img  src="images/carbon-texture.png"
                     id="carbon"
@@ -135,16 +135,17 @@
             <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Jet Engine</h3>
           </div>
           <div class="panel-body" style="display: table;
-                                height: 94%; width:100%">
+                                height: 94%; width:100%; background-color: #f5f5f5">
             <div class="content">
               <div id="jet" style="background-color: #708090;min-height: 350px;" class="webgl img-thumbnail img-responsive"></div>
             </div>
+            <br>
             <div class="footer">
               <div class="col-sm-3">
                 <button type="submit" id="playbtn" class="btn btn-primary cust-buton">Play</button>
               </div>
               <div class="col-sm-9" style="padding-left:10px;">
-                <table style="margin-top:5px;" width="100%" border="0">
+                <table style="margin-top:5px;"  width="100%" border="0">
                   <colgroup>
                     <col span="1" style="width: 15%;">
                     <col span="1" style="width: 85%;">
@@ -159,7 +160,7 @@
               </div>
               <br/>
               <br/>
-              <table border="0" class="table table-bordered">
+              <table border="0" class="table table-bordered table-curved" style="background-color: #ffffff;">
                 <!--<col width="15%">-->
                 <col width="20%">
                 <col width="10%">
