--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <script data-main="scripts/main" src="scripts/vendor/requirejs/require.js"></script>
+  <script data-main="scripts/jetengine_main" src="scripts/vendor/requirejs/require.js"></script>
 
 </head>
 <body>
@@ -41,10 +41,10 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse navbar-left">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#/">Jet Engine</a></li>
-            <li><a href="#contact">Race Car</a></li>
-            <li><a href="#contact" data-toggle="modal" data-target="#ABOUTModal"> About</a></li>
-            <li><a href="#contact" data-toggle="modal" data-target="#HELPModal">Help</a></li>
+            <li><a href="jetengine.html">Jet Engine</a></li>
+            <li><a href="racecar.html">Race Car</a></li>
+            <li><a data-toggle="modal" data-target="#ABOUTModal"> About</a></li>
+            <li><a data-toggle="modal" data-target="#HELPModal">Help</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
@@ -53,142 +53,40 @@
     </div>
   </nav>
   <div class="wrapper">
-    <div class="row"style="height:100%;padding:0px; padding-left: 15px; padding-right: 15px; margin:0px;">
-      <div class="col-lg-3" style="height:100%; padding:5px;">
-        <table class="contact-table borderless table  fixed" style="height: 96%; margin-top:10px; background-color: #f5f5f5">
-          <col width="75%">
-          <col width="25%">
-          <tr>
-            <td valign="middle"><b>Steel</b></td>
-            <td>
-              <img  src="images/metal3.jpg"
-                    id="steel"
-                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
-                    class="Steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
-                />
-            </td>
-          </tr>
-          <tr>
-            <td valign="middle"><b>Nickle</b></td>
-            <td>
-              <img  src="images/aluminium.jpg"
-                    id="nickle"
-                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
-                    class="Wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-            </td>
-          </tr>
-          <tr>
-            <td valign="middle"><b>Titanium</b></td>
-            <td>
-              <img  src="images/titainum.jpg"
-                    id="titanium"
-                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
-                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-            </td>
-          </tr>
-          <tr>
-            <td valign="middle"><b>Wood</b></td>
-            <td>
-              <img  src="images/crate.jpg"
-                    id="wood"
-                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
-                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-            </td>
-          </tr>
-          <tr>
-            <td valign="middle"><b>Carbon Fibre</b></td>
-            <td>
-              <img  src="images/carbon-texture.png"
-                    id="carbon"
-                    onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
-                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
-            </td>
-          </tr>
-          <tr>
-            <th style="text-align: center" colspan="2">Material: <span id="Material_Name"></span> </th>
-          </tr>
-          <tr>
-            <td>Density</td>
-            <td style="text-align: center"  id="Material_Density"></td>
-          </tr>
-          <tr>
-            <td>Strength</td>
-            <td style="text-align: center" id="Material_Strength"></td>
-          </tr>
-          <tr>
-            <td>High temperature capability</td>
-            <td style="text-align: center" id="Material_Temperature"></td>
-          </tr>
-          <tr>
-            <td>Oxidation resistance</td>
-            <td style="text-align: center" id="Material_Oxidation"></td>
-          </tr>
-          <tr>
-            <td>Corrosion resistance</td>
-            <td style="text-align: center" id="Material_Corrosion"></td>
-          </tr>
-        </table>
-      </div>
-      <div class="col-lg-9" style="height:100%; padding:5px;">
-        <div class="panel panel-default" style="height:96%;  margin-top:10px;">
+    <div class="row">
+
+      <div class="col-md-6" style="padding: 10px">
+
+        <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Jet Engine</h3>
+            <h3 class="panel-title">Jet Engine</h3>
           </div>
-          <div class="panel-body" style="display: table;
-                                height: 94%; width:100%; background-color: #f5f5f5">
-            <div class="content">
-              <div id="jet" style="background-color: #708090;min-height: 350px;" class="webgl img-thumbnail img-responsive"></div>
-            </div>
-            <br>
-            <div class="footer">
-              <div class="col-sm-3">
-                <button type="submit" id="playbtn" class="btn btn-primary cust-buton">Play</button>
-              </div>
-              <div class="col-sm-9" style="padding-left:10px;">
-                <table style="margin-top:5px;"  width="100%" border="0">
-                  <colgroup>
-                    <col span="1" style="width: 15%;">
-                    <col span="1" style="width: 85%;">
-                  </colgroup>
-                  <tr>
-                    <td>Thrust:</td>
-                    <td>
-                      <div id="slider"></div>
-                    </td>
-                  </tr>
-                </table>
-              </div>
-              <br/>
-              <br/>
-              <table border="0" class="table table-bordered table-curved" style="background-color: #ffffff;">
-                <!--<col width="15%">-->
-                <col width="20%">
-                <col width="10%">
-                <col width="75%">
-                <tr>
-                  <!-- <th rowspan="4" id="parIMG"></th>-->
-                  <th rowspan="3">
-                    <div id="FanCheck" class="drop-thing img-thumbnail"></div>
-                  </th>
-                  <th colspan="2" id="partName" class="text-center">
-                    <h4>Part</h4>
-                  </th>
-                </tr>
-                <tr>
-                  <td>Description</td>
-                  <td id="PartDesc"></td>
-                </tr>
-                <tr>
-                  <td>Material Requirements</td>
-                  <td id="PartRequirement"></td>
-                </tr>
-              </table>
-            </div>
+          <div class="panel-body">
+            <a href="jetengine.html"><img src="images/jetengine.png"
+                                          style="height: 300px; display: block; margin-left: auto;margin-right: auto;"
+                                          class="img-thumbnail img-rounded"></a>
           </div>
         </div>
+
       </div>
-    </div>
-  </div>
+
+
+      <div class="col-md-6" style="padding: 10px">
+
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Race Car</h3>
+          </div>
+          <div class="panel-body">
+            <a href="racecar.html"><img src="images/racecar.png"
+                                        style="height: 300px; display: block; margin-left: auto;margin-right: auto;"
+                                        class="img-thumbnail img-rounded"></a>
+        </div>
+
+      </div>
+
+
+      </div>
 </div>
 <!-- /.container -->
 
