Overhall, mergered both parts of the app into one codebase _3DView

--- a/app/jetengine.html
+++ b/app/jetengine.html
@@ -66,7 +66,7 @@
             <td>
               <img src="images/metal3.jpg"
                    id="steel"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="Steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                 />
             </td>
@@ -76,7 +76,7 @@
             <td>
               <img src="images/aluminium.jpg"
                    id="nickle"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="Wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -85,7 +85,7 @@
             <td>
               <img src="images/titainum.jpg"
                    id="titanium"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -94,7 +94,7 @@
             <td>
               <img src="images/crate.jpg"
                    id="wood"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -103,7 +103,7 @@
             <td>
               <img src="images/carbon-texture.png"
                    id="carbon"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -149,7 +149,10 @@
               <div class="col-sm-3">
                 <button type="submit" id="playbtn" class="btn btn-primary cust-buton">Play</button>
               </div>
-              <div class="col-sm-9" style="padding-left:10px;">
+              <div class="col-sm-3">
+                <button type="submit" id="resetbtn" class="btn btn-primary cust-buton">Reset Camera</button>
+              </div>
+              <div class="col-sm-6" style="padding-left:10px;">
                 <table style="margin-top:5px;" width="100%" border="0">
                   <colgroup>
                     <col span="1" style="width: 15%;">
