--- a/app/racecar.html
+++ b/app/racecar.html
@@ -66,7 +66,7 @@
             <td>
               <img src="images/metal3.jpg"
                    id="steel"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="Steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
                 />
             </td>
@@ -76,7 +76,7 @@
             <td>
               <img src="images/aluminium.jpg"
                    id="nickle"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="Wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -85,7 +85,7 @@
             <td>
               <img src="images/titainum.jpg"
                    id="titanium"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -94,7 +94,7 @@
             <td>
               <img src="images/crate.jpg"
                    id="wood"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -103,7 +103,7 @@
             <td>
               <img src="images/carbon-texture.png"
                    id="carbon"
-                   onclick="jetEngineView.modelInfomation.setMaterialInfo(this.id);"
+                   onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
             </td>
           </tr>
@@ -135,7 +135,7 @@
       <div class="col-lg-9" style="height:100%; padding:5px;">
         <div class="panel panel-default" style="height:96%;  margin-top:10px;">
           <div class="panel-heading">
-            <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i> Jet Engine</h3>
+            <h3 class="panel-title"><i class="fa fa-fighter-jet fa-fw"></i>Race Car</h3>
           </div>
           <div class="panel-body" style="display: table;
                                 height: 94%; width:100%; background-color: #f5f5f5">
@@ -149,8 +149,11 @@
               <div class="col-sm-3">
                 <button type="submit" id="playbtn" class="btn btn-primary cust-buton">Play</button>
               </div>
-              <div class="col-sm-9" style="padding-left:10px;">
-                
+              <div class="col-sm-3">
+                <button type="submit" id="resetbtn" class="btn btn-primary cust-buton">Reset Camera</button>
+              </div>
+              <div class="col-sm-3" style="padding-left:10px;">
+
               </div>
               <br/>
               <br/>
