--- a/app/scripts/depricated/oldDesign.html
+++ b/app/scripts/depricated/oldDesign.html
@@ -10,7 +10,7 @@
       <meta name="author" content="">
 
       <title>Freelancer - Start Bootstrap Theme</title>
-      <link href="css/oldmain.css" rel="stylesheet" type="text/css">
+    <link href="../../css/oldmain.css" rel="stylesheet" type="text/css">
 
       <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
       <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -22,7 +22,7 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
       <![endif]-->
 
-      <script data-main="scripts/main" src="scripts/vendor/requirejs/require.js"></script>
+    <script data-main="scripts/main" src="../vendor/requirejs/require.js"></script>
 
   </head>
 
@@ -33,7 +33,7 @@
     <!-- Sidebar -->
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
-        <img src="images/swLogo.png" width="100%;" style="padding-left:20px;padding-right: 20px">
+        <img src="../../images/swLogo.png" width="100%;" style="padding-left:20px;padding-right: 20px">
         <li class="active">
           <button type="submit" id="Engine" class="btn btn-primary cust-buton">Jet Engines</button>
         </li>
@@ -156,28 +156,28 @@
                   </tr>
                   <tr>
                     <td>
-                      <img  src="images/metal3.jpg"
+                      <img src="../../images/metal3.jpg"
                             id="steelImage"
                             class="img img-circle img-responsive img-thumbnail materialImg"
                             />
                     </td>
                     <td>
-                      <img  src="images/aluminium.jpg"
+                      <img src="../../images/aluminium.jpg"
                             id="nickelImage"
                             class="img img-circle img-responsive img-thumbnail materialImg"/>
                     </td>
                     <td>
-                      <img  src="images/titainum.jpg"
+                      <img src="../../images/titainum.jpg"
                             id="titainumImage"
                             class="img img-circle img-responsive img-thumbnail materialImg"/>
                     </td>
                     <td>
-                      <img  src="images/crate.jpg"
+                      <img src="../../images/crate.jpg"
                             id="woodImage"
                             class="img img-circle img-responsive img-thumbnail materialImg"/>
                     </td>
                     <td>
-                      <img  src="images/carbon-texture.png"
+                      <img src="../../images/carbon-texture.png"
                             id="carbomImage"
                             class="img img-circle img-responsive img-thumbnail materialImg"/>
                     </td>
@@ -233,23 +233,28 @@
                     </tr>
                     <tr>
                       <td>
-                        <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/fanblade.png"
+                        <img class="partIMG img img-responsive img-thumbnail materialImg"
+                             src="../../images/parts/fanblade.png"
                              width="100%" align="middle">
                       </td>
                       <td>
-                        <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/compresor.png"
+                        <img class="partIMG img img-responsive img-thumbnail materialImg"
+                             src="../../images/parts/compresor.png"
                              width="100%" align="middle">
                       </td>
                       <td>
-                        <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/combusture.png"
+                        <img class="partIMG img img-responsive img-thumbnail materialImg"
+                             src="../../images/parts/combusture.png"
                              width="100%" align="middle">
                       </td>
                       <td>
-                        <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/shaft.png"
+                        <img class="partIMG img img-responsive img-thumbnail materialImg"
+                             src="../../images/parts/shaft.png"
                              width="100%" align="middle">
                       </td>
                       <td>
-                        <img class="partIMG img img-responsive img-thumbnail materialImg" src="images/parts/turbine.png"
+                        <img class="partIMG img img-responsive img-thumbnail materialImg"
+                             src="../../images/parts/turbine.png"
                              width="100%" align="middle">
                       </td>
                     </tr>
@@ -298,23 +303,23 @@
                     </tr>
                     <tr>
                       <td>
-                        <img src="images/metal3.jpg"
+                        <img src="../../images/metal3.jpg"
                              class="steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
                       </td>
                       <td>
-                        <img src="images/aluminium.jpg"
+                        <img src="../../images/aluminium.jpg"
                              class="nickle scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
                       </td>
                       <td>
-                        <img src="images/titainum.jpg"
+                        <img src="../../images/titainum.jpg"
                              class="titainum scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
                       </td>
                       <td>
-                        <img src="images/crate.jpg"
+                        <img src="../../images/crate.jpg"
                              class="wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
                       </td>
                       <td>
-                        <img src="images/carbon-texture.png"
+                        <img src="../../images/carbon-texture.png"
                              class="carbon scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
                       </td>
                     </tr>
