--- a/app/scripts/depricated/racecar.html
+++ b/app/scripts/depricated/racecar.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
 
   <title>Material Selection</title>
-  <link href="css/main.css" rel="stylesheet" type="text/css">
+  <link href="../../css/main.css" rel="stylesheet" type="text/css">
 
   <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -22,7 +22,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <script data-main="scripts/racecar_main" src="scripts/vendor/requirejs/require.js"></script>
+  <script data-main="scripts/racecar_main" src="../vendor/requirejs/require.js"></script>
 
 </head>
 <body>
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Material selection</a>
+          <a class="navbar-brand" href="../../index.html">Material selection</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse navbar-left">
           <ul class="nav navbar-nav">
@@ -64,7 +64,7 @@
           <tr>
             <td valign="middle"><b>Steel</b></td>
             <td>
-              <img src="images/metal3.jpg"
+              <img src="../../images/metal3.jpg"
                    id="steel"
                    onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="Steel scrollToTOP img img-circle img-responsive img-thumbnail materialImg"
@@ -74,7 +74,7 @@
           <tr>
             <td valign="middle"><b>Nickle</b></td>
             <td>
-              <img src="images/aluminium.jpg"
+              <img src="../../images/aluminium.jpg"
                    id="nickle"
                    onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="Wood scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
@@ -83,7 +83,7 @@
           <tr>
             <td valign="middle"><b>Titanium</b></td>
             <td>
-              <img src="images/titainum.jpg"
+              <img src="../../images/titainum.jpg"
                    id="titanium"
                    onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
@@ -92,7 +92,7 @@
           <tr>
             <td valign="middle"><b>Wood</b></td>
             <td>
-              <img src="images/crate.jpg"
+              <img src="../../images/crate.jpg"
                    id="wood"
                    onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
@@ -101,7 +101,7 @@
           <tr>
             <td valign="middle"><b>Carbon Fibre</b></td>
             <td>
-              <img src="images/carbon-texture.png"
+              <img src="../../images/carbon-texture.png"
                    id="carbon"
                    onclick="_3DView.modelInfomation.setMaterialInfo(this.id);"
                    class="scrollToTOP img img-circle img-responsive img-thumbnail materialImg"/>
